V1.3 Design fix with navigation bar
- Fixed navigation bar overlapping with the main title of the website

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,7 @@ body {
 /*header section*/
 header {
     display: block;
+    z-index: 1;
 }
 .hero_area {
     position: relative;
